--- a/public/css/business-casual.css
+++ b/public/css/business-casual.css
@@ -74,3 +74,21 @@ hr.divider {
 .map-container iframe.clicked {
     pointer-events: auto;
 }
+
+.item-container{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding-bottom: 5px;
+}
+
+.item-image{
+  width: 100%;
+  height: 350px;
+}
+
+.item-detail{
+  padding: 15px;
+}
+
+.btn-add{
+  float: right;
+}
